Loads of tweaks and improvements

--- a/src/pages/blog/sound-of-silence/index.mdx
+++ b/src/pages/blog/sound-of-silence/index.mdx
@@ -5,7 +5,7 @@ export const meta = {
   title: 'The Sound of Silence',
   description: 'Dear friends, It’s been ages. I’ve meant to write to you for a while now, but never had the courage. I am deeply sorry. This post is both an explanation to you and a plan of action for me.',
   slug: 'sound-of-silence',
-  date: 'April 06, 2017',
+  date: '2017/4/6',
   category: JOURNAL
 }
 
