--- a/src/pages/blog/this-is-the-europe-i-am-proud-of/index.mdx
+++ b/src/pages/blog/this-is-the-europe-i-am-proud-of/index.mdx
@@ -5,7 +5,7 @@ export const meta = {
   title: 'This is the Europe I am proud of',
   description: 'I am in tears. Finally (!) Austria and Germany show some compassion and welcome refugees. The outpouring of support for refugees is humbling.',
   slug: 'this-is-the-europe-i-am-proud-of',
-  date: 'September 05, 2015',
+  date: '2015/9/5',
   category: OPINION
 }
 
