--- a/src/pages/blog/africa-is-not-a-country/index.mdx
+++ b/src/pages/blog/africa-is-not-a-country/index.mdx
@@ -5,7 +5,7 @@ export const meta = {
   title: 'Africa is not a country',
   description: 'Guess what, it’s a continent. It consists of 55 individual countries, yet western journalists insist on referring to it as one place.',
   slug: 'africa-is-not-a-country',
-  date: 'March 27, 2015',
+  date: '2015/3/27',
   category: OPINION
 }
 
