Migrate post pages

--- a/src/pages/blog/this-is-the-europe-i-am-proud-of/index.mdx
+++ b/src/pages/blog/this-is-the-europe-i-am-proud-of/index.mdx
@@ -1,5 +1,6 @@
 import { OPINION } from '../../../constants/categories'
 import Post from '../../../layouts/post'
+import Blockquote from '../../../components/blog/Blockquote'
 
 export const meta = {
   title: 'This is the Europe I am proud of',
@@ -17,8 +18,7 @@ This is the Europe I want. This is the Europe I am proud of.
 
 Politicians insist that this is an exception, nonetheless it is a step in the right direction. Quite in contrast are the reactions in Hungary where a new border fence is being erected and heavily-equipped police encircle exhausted refugees to deport them to camps.
 
-> “Now we are breathing the air of freedom here.”
-    — Wahid, a Syrian refugee
+<Blockquote cite="Wahid, a Syrian refugee">“Now we are breathing the air of freedom here.”</Blockquote>
 
 [Michael Ignatieff](http://www.nytimes.com/2015/09/06/opinion/sunday/the-refugee-crisis-isnt-a-european-problem.html) brings it to the point: “What’s holding back sympathy for the Syrians? They’ve been barrel-bombed in Aleppo by their own regime, they’ve been tortured, kidnapped and massacred by miscellaneous jihadis and opposition militias. They’ve been in refugee camps for years, waiting for that cruelly deceiving fiction ‘the international community’ to come to their aid. Now, when they take to the roads, to the boats and to the trains, all our political leaders can think of is fences, barbed wire and more police.”
 
