Handle non-jpg images

--- a/src/pages/blog/sound-of-silence/index.mdx
+++ b/src/pages/blog/sound-of-silence/index.mdx
@@ -1,9 +1,10 @@
 import { JOURNAL } from '../../../constants/categories'
 import Post from '../../../layouts/post'
+import Blockquote from '../../../components/blog/Blockquote'
 
 export const meta = {
   title: 'The Sound of Silence',
-  description: 'Dear friends, It’s been ages. I’ve meant to write to you for a while now, but never had the courage. I am deeply sorry. This post is both an explanation to you and a plan of action for me.',
+  description: 'Dear friends, it’s been ages. I’ve meant to write to you for a while now but never had the courage. I am deeply sorry. This post is both an explanation to you and a plan of action for me.',
   slug: 'sound-of-silence',
   date: '2017/4/6',
   category: JOURNAL
@@ -20,7 +21,7 @@ I felt a deep, numbing sadness. It felt like a dream where I kept falling and fa
 
 I listened to music on full volume to drown out the pain. I stayed awake until 3 o’clock in the morning until I fell asleep on my laptop, because I was too scared to face my thoughts before falling asleep. I worked 80 hours a week to keep myself distracted. I didn’t go outside for days. I didn’t message my closest friends or anyone else for months.
 
-> I was running away from everything — but I couldn’t run from myself.
+<Blockquote align={Blockquote.FULL}>I was running away from everything — but I couldn’t run from myself.</Blockquote>
 
 I can’t give you any reasons why I started running. I don’t know myself. I only know that the longer and faster I ran, the worse my anxiety got and the harder it seemed to get out of it.
 
@@ -40,4 +41,5 @@ With much :heart:,
 Connor
 
 
-PS: The title and password are references to the song [The Sound of Silence](https://open.spotify.com/track/2LkaNhCrNVmcYgXJeLVmsw) by Simon & Garfunkel.
+
+_PS: The title is a reference to the song [The Sound of Silence](https://www.youtube.com/watch?v=4zLfCnGVeL4) by Simon & Garfunkel. I've been listening to it on repeat._
