--- a/src/pages/blog/africa-is-not-a-country/index.mdx
+++ b/src/pages/blog/africa-is-not-a-country/index.mdx
@@ -1,22 +1,36 @@
-import { OPINION } from '../../../constants/categories'
+import path from 'path'
 import Post from '../../../layouts/post'
 import Figure from '../../../components/blog/Figure'
+import { OPINION } from '../../../constants/categories'
 import { IMAGES_PATH } from '../../../constants/paths'
 
 export const meta = {
   title: 'Africa is not a country',
-  description: 'Guess what, it’s a continent. It consists of 55 individual countries, yet western journalists insist on referring to it as one place.',
+  description:
+    'Guess what, it’s a continent. It consists of 55 individual countries, yet western journalists insist on referring to it as one place.',
   slug: 'africa-is-not-a-country',
+  image: {
+    ...require('./zebra.jpg?resize&sizes[]=400&sizes[]=800&sizes[]=1600&sizes[]=2400'),
+    colors: require('./zebra.jpg?lqip-colors'),
+    alt: 'A zebra stands on dry grass and looks straight into the camera.'
+  },
   date: '2015/3/27',
   category: OPINION
 }
 
 export default ({ children }) => <Post {...meta}>{children}</Post>
 
-
 They generally don’t differentiate between the unique cultures of Botswana and Mauritania, even though they are about as different and far away from each other as the United States and Brazil. They portrait Africa is one big country characterized by HIV/AIDS, poverty, pirates, civil war, famines — the only exceptions perhaps being the north (the region of the Arab spring) and South Africa with elephants and giraffes grazing in front of deep red sunsets. Oh yeah, and the 2010 Soccer World Cup.
 
-<Figure src={`${IMAGES_PATH}/blog/africa-is-not-a-country/child-eyes.jpg`} caption="Yes, this photo was taken in Africa. But it is wrong to reduce ‘Africa’ to big eyes and poverty. There is so much more to the continent and each country is unique." align={Figure.LEFT} />
+<Figure
+  image={{
+    ...require(`./child-eyes.jpg?resize&sizes[]=400&sizes[]=800&sizes[]=1600&sizes[]=2400`),
+    colors: require(`./child-eyes.jpg?lqip-colors`),
+    alt: 'A young black child looks up from the painting she is drawing.'
+  }}
+  caption="Yes, this photo was taken in Africa. But it is wrong to reduce ‘Africa’ to big eyes and poverty. There is so much more to the continent and each country is unique."
+  align={Figure.LEFT}
+/>
 
 Adding to that image are charities with their ads of incredibly cute black children living in round huts, their big eyes starring sadly into the camera. The next time you throw your change into the donation jar at a supermarket, think about this first: often charities will use your money to give out free goods to families in need. Seems perfectly fine, but it actually destroys the local economy. Why should a family spend money on shoes if it knows that it will receive free ones? The local shoe industry loses its customers and goes bankrupt, leaving more people unemployed and unable to support their families.
 
