--- a/src/pages/blog/sound-of-silence/index.mdx
+++ b/src/pages/blog/sound-of-silence/index.mdx
@@ -4,14 +4,19 @@ import Blockquote from '../../../components/blog/Blockquote'
 
 export const meta = {
   title: 'The Sound of Silence',
-  description: 'Dear friends, it’s been ages. I’ve meant to write to you for a while now but never had the courage. I am deeply sorry. This post is both an explanation to you and a plan of action for me.',
+  description:
+    'Dear friends, it’s been ages. I’ve meant to write to you for a while now but never had the courage. I am deeply sorry. This post is both an explanation to you and a plan of action for me.',
   slug: 'sound-of-silence',
+  image: {
+    ...require('./waves.jpg?resize&sizes[]=400&sizes[]=800&sizes[]=1600&sizes[]=2400'),
+    colors: require('./waves.jpg?lqip-colors'),
+    alt: 'Waves disturb a dark body of water.'
+  },
   date: '2017/4/6',
   category: JOURNAL
 }
 
 export default ({ children }) => <Post {...meta}>{children}</Post>
-
 
 # What happened?
 
@@ -21,7 +26,9 @@ I felt a deep, numbing sadness. It felt like a dream where I kept falling and fa
 
 I listened to music on full volume to drown out the pain. I stayed awake until 3 o’clock in the morning until I fell asleep on my laptop, because I was too scared to face my thoughts before falling asleep. I worked 80 hours a week to keep myself distracted. I didn’t go outside for days. I didn’t message my closest friends or anyone else for months.
 
-<Blockquote align={Blockquote.FULL}>I was running away from everything — but I couldn’t run from myself.</Blockquote>
+<Blockquote align={Blockquote.FULL}>
+  I was running away from everything — but I couldn’t run from myself.
+</Blockquote>
 
 I can’t give you any reasons why I started running. I don’t know myself. I only know that the longer and faster I ran, the worse my anxiety got and the harder it seemed to get out of it.
 
@@ -39,7 +46,5 @@ Thank you to everyone who has been there for me, reached out to me or thought of
 
 With much :heart:,  
 Connor
-
-
 
 _PS: The title is a reference to the song [The Sound of Silence](https://www.youtube.com/watch?v=4zLfCnGVeL4) by Simon & Garfunkel. I've been listening to it on repeat._
