--- a/src/pages/blog/this-is-the-europe-i-am-proud-of/index.mdx
+++ b/src/pages/blog/this-is-the-europe-i-am-proud-of/index.mdx
@@ -4,14 +4,19 @@ import Blockquote from '../../../components/blog/Blockquote'
 
 export const meta = {
   title: 'This is the Europe I am proud of',
-  description: 'I am in tears. Finally (!) Austria and Germany show some compassion and welcome refugees. The outpouring of support for refugees is humbling.',
+  description:
+    'I am in tears. Finally (!) Austria and Germany show some compassion and welcome refugees. The outpouring of support for refugees is humbling.',
   slug: 'this-is-the-europe-i-am-proud-of',
+  image: {
+    ...require('./map-tattoo.jpg?resize&sizes[]=400&sizes[]=800&sizes[]=1600&sizes[]=2400'),
+    colors: require('./map-tattoo.jpg?lqip-colors'),
+    alt: 'A stretched out arm shows a tattoo of the map of the world.'
+  },
   date: '2015/9/5',
   category: OPINION
 }
 
 export default ({ children }) => <Post {...meta}>{children}</Post>
-
 
 “By Saturday afternoon, officials in Vienna had to ask people to stay away from the train station, which was heavily overcrowded with well-wishers bearing donations.” ([The Guardian](https://www.theguardian.com/world/2015/sep/05/refugee-crisis-warm-welcome-for-people-bussed-from-budapest))
 
@@ -19,7 +24,9 @@ This is the Europe I want. This is the Europe I am proud of.
 
 Politicians insist that this is an exception, nonetheless it is a step in the right direction. Quite in contrast are the reactions in Hungary where a new border fence is being erected and heavily-equipped police encircle exhausted refugees to deport them to camps.
 
-<Blockquote cite="Wahid, a Syrian refugee" align={Blockquote.RIGHT}>“Now we are breathing the air of freedom here.”</Blockquote>
+<Blockquote cite="Wahid, a Syrian refugee" align={Blockquote.RIGHT}>
+  “Now we are breathing the air of freedom here.”
+</Blockquote>
 
 [Michael Ignatieff](http://www.nytimes.com/2015/09/06/opinion/sunday/the-refugee-crisis-isnt-a-european-problem.html) brings it to the point: “What’s holding back sympathy for the Syrians? They’ve been barrel-bombed in Aleppo by their own regime, they’ve been tortured, kidnapped and massacred by miscellaneous jihadis and opposition militias. They’ve been in refugee camps for years, waiting for that cruelly deceiving fiction ‘the international community’ to come to their aid. Now, when they take to the roads, to the boats and to the trains, all our political leaders can think of is fences, barbed wire and more police.”
 
