Redesign blog homepage

--- a/src/pages/blog/this-is-the-europe-i-am-proud-of/index.mdx
+++ b/src/pages/blog/this-is-the-europe-i-am-proud-of/index.mdx
@@ -13,7 +13,8 @@ export const meta = {
     alt: 'A stretched out arm shows a tattoo of the map of the world.'
   },
   date: '2015/9/5',
-  category: OPINION
+  category: OPINION,
+  featured: true
 }
 
 export default ({ children }) => <Post {...meta}>{children}</Post>
