--- a/src/pages/blog/nobody-has-the-intention-of-building-an-airport/index.mdx
+++ b/src/pages/blog/nobody-has-the-intention-of-building-an-airport/index.mdx
@@ -10,7 +10,7 @@ export const meta = {
   image: {
     ...require('./nobody-building-airport.jpg?resize&sizes[]=400&sizes[]=800&sizes[]=1600&sizes[]=2400'),
     colors: require('./nobody-building-airport.jpg?lqip-colors'),
-    alt: 'A zebra stands on dry grass and looks straight into the camera.'
+    alt: 'An artistic rendering of the welcome hall of the new BER airport.'
   },
   date: '2013/9/15',
   category: JOURNAL
