A lot oore stuff 😬

--- a/src/pages/blog/nobody-has-the-intention-of-building-an-airport/index.mdx
+++ b/src/pages/blog/nobody-has-the-intention-of-building-an-airport/index.mdx
@@ -3,7 +3,7 @@ import { JOURNAL } from '../../../constants/categories'
 import { Blockquote } from '@sumup/circuit-ui'
 
 export const meta = {
-  title: '"Nobody has the intention of building an airport!"*',
+  title: '“Nobody has the intention of building an airport!”*',
   description:
     'These were the words that passed through my mind as I got on the impossibly crowded bus to Berlin Tegel airport. I’ve never seen so many people unintentionally hugging each other.',
   slug: 'nobody-has-the-intention-of-building-an-airport',
@@ -30,4 +30,13 @@ Tomorrow I’m going to start an internship at the office of the German UWC Nati
 
 ---
 
-<Blockquote size={Blockquote.MEGA}> *Reference to the famous quote from 1961 by Walter Ulbricht, then head of state of the German Democratic Republic: “Nobody has the intention of building a wall!”  —  two month later work began on what was to become the <a href="https://en.wikipedia.org/wiki/Berlin_Wall">Berlin Wall</a>. At the moment workers and politicians struggle to finish the new Berlin Brandenburg airport that is supposed to replace the two old airports Tegel & Schönefeld and should have started operation over a year ago.</Blockquote>
+<Blockquote size={Blockquote.MEGA}>
+  {' '}
+  *Reference to the famous quote from 1961 by Walter Ulbricht, then head of state
+  of the German Democratic Republic: “Nobody has the intention of building a wall!” 
+  —  two month later work began on what was to become the <a href="https://en.wikipedia.org/wiki/Berlin_Wall">
+    Berlin Wall
+  </a>. At the moment workers and politicians struggle to finish the new Berlin Brandenburg
+  airport that is supposed to replace the two old airports Tegel & Schönefeld and
+  should have started operation over a year ago.
+</Blockquote>
