--- a/src/pages/about/index.mdx
+++ b/src/pages/about/index.mdx
@@ -1,5 +1,5 @@
 import Article from '../../layouts/article'
-import Figure from '../../components/blog/Figure'
+import Figure from '../../components/images/Figure'
 
 export const meta = {
   title: 'I am Connor.',
@@ -26,4 +26,3 @@ My roots lie in the field of design, however I ultimately found my passion in pr
 And it captivated me. I built a solid foundation in front-end development and eventually turned coding into my profession. After a year of freelancing in 2016, I am now part of the amazing frontend team at [SumUp](https://sumup.com). The approach I take to my work is fun, fearless, and always forward-looking.
 
 My goal is to make technology more human. Technology should serve and delight its users without getting in the way. I always optimise for accessibility, usability, and performance to craft intuitive digital experiences for everyone.
-
