--- a/src/pages/blog/africa-is-not-a-country/index.mdx
+++ b/src/pages/blog/africa-is-not-a-country/index.mdx
@@ -1,5 +1,5 @@
 import Post from '../../../layouts/post'
-import Figure from '../../../components/blog/Figure'
+import Figure from '../../../components/images/Figure'
 import { OPINION } from '../../../constants/categories'
 
 export const meta = {
