Update alt descriptions

--- a/src/pages/projects/jekyll-themes/index.mdx
+++ b/src/pages/projects/jekyll-themes/index.mdx
@@ -10,7 +10,7 @@ export const meta = {
   image: {
     ...require('./jekyll-themes.jpg?resize&sizes[]=400&sizes[]=800&sizes[]=1200&sizes[]=2400'),
     colors: require('./jekyll-themes.jpg?lqip-colors'),
-    alt: 'A zebra stands on dry grass and looks straight into the camera.'
+    alt: 'Screenshot of the Change Jekyll theme'
   },
   client: 'Side Project',
   skills: ['Design', 'Development']
@@ -22,9 +22,8 @@ export default ({ children }) => <Project {...meta}>{children}</Project>
   image={{
     ...require(`./change.jpg?resize&sizes[]=400&sizes[]=800&sizes[]=1200&sizes[]=2400`),
     colors: require(`./change.jpg?lqip-colors`),
-    alt: 'A young black child looks up from the painting she is drawing.'
+    alt: 'Screenshot of the Change Jekyll theme'
   }}
-  caption=""
   align={Figure.FULL}
 />
 
@@ -38,7 +37,7 @@ Change is a minimalistic, duo-chromatic Jekyll theme that pairs a prominent head
   image={{
     ...require(`./spring.jpg?resize&sizes[]=400&sizes[]=800&sizes[]=1200&sizes[]=2400`),
     colors: require(`./spring.jpg?lqip-colors`),
-    alt: 'A young black child looks up from the painting she is drawing.'
+    alt: 'Screenshot of the Spring Jekyll theme'
   }}
   align={Figure.FULL}
 />
@@ -53,7 +52,7 @@ Spring is a one-page, two-column Jekyll theme.
   image={{
     ...require(`./summer.jpg?resize&sizes[]=400&sizes[]=800&sizes[]=1200&sizes[]=2400`),
     colors: require(`./summer.jpg?lqip-colors`),
-    alt: 'A young black child looks up from the painting she is drawing.'
+    alt: 'Screenshot of the Summer Jekyll theme'
   }}
   align={Figure.FULL}
 />
@@ -68,7 +67,7 @@ Summer is a simple Jekyll theme with a photo sidebar.
   image={{
     ...require(`./docs.jpg?resize&sizes[]=400&sizes[]=800&sizes[]=1200&sizes[]=2400`),
     colors: require(`./docs.jpg?lqip-colors`),
-    alt: 'A young black child looks up from the painting she is drawing.'
+    alt: 'Screenshot of the Docs Jekyll theme'
   }}
   align={Figure.FULL}
 />
