--- a/src/pages/projects/gutshaus-langensee/index.mdx
+++ b/src/pages/projects/gutshaus-langensee/index.mdx
@@ -11,7 +11,7 @@ export const meta = {
   image: {
     ...require('./gutshaus-langensee.jpg?resize&sizes[]=400&sizes[]=800&sizes[]=1200&sizes[]=2400'),
     colors: require('./gutshaus-langensee.jpg?lqip-colors'),
-    alt: 'A zebra stands on dry grass and looks straight into the camera.'
+    alt: 'Screenshot of gutshaus-langensee.de'
   },
   link: 'https://gutshaus-langensee.de',
   client: 'Gutshaus Langensee',
