--- a/src/pages/projects/uwc-deutschland/index.mdx
+++ b/src/pages/projects/uwc-deutschland/index.mdx
@@ -11,7 +11,7 @@ export const meta = {
   image: {
     ...require('./uwc-deutschland.jpg?resize&sizes[]=400&sizes[]=800&sizes[]=1200&sizes[]=2400'),
     colors: require('./uwc-deutschland.jpg?lqip-colors'),
-    alt: 'A zebra stands on dry grass and looks straight into the camera.'
+    alt: 'Screenshot of uwc.de'
   },
   link: 'https://uwc.de',
   client: 'Deutsche Stiftung UWC',
@@ -24,9 +24,8 @@ export default ({ children }) => <Project {...meta}>{children}</Project>
   image={{
     ...require(`./desktop-mobile.jpg?resize&sizes[]=400&sizes[]=800&sizes[]=1200&sizes[]=2400`),
     colors: require(`./desktop-mobile.jpg?lqip-colors`),
-    alt: 'A young black child looks up from the painting she is drawing.'
+    alt: 'Screenshot of uwc.de'
   }}
-  caption=""
   align={Figure.FULL}
 />
 
@@ -55,12 +54,13 @@ The result was remarkable: we reduced the number of pages from 232 to 37, intuit
     {
       ...require(`./feature-list.jpg?resize&sizes[]=400&sizes[]=800&sizes[]=1200&sizes[]=2400`),
       colors: require(`./feature-list.jpg?lqip-colors`),
-      alt: 'A young black child looks up from the painting she is drawing.'
+      alt: 'Post-it notes with features written on them hang on a wall'
     },
     {
       ...require(`./page-structure.jpg?resize&sizes[]=400&sizes[]=800&sizes[]=1200&sizes[]=2400`),
       colors: require(`./page-structure.jpg?lqip-colors`),
-      alt: 'A young black child looks up from the painting she is drawing.'
+      alt:
+        'Post-it notes with page names written on them are grouped by category on a wall'
     }
   ]}
   caption="Visualised navigation structure on the left, feature list on the right."
@@ -86,26 +86,30 @@ I spent the whole of May in Sketch drafting the design for the website. I shared
     {
       ...require(`./homepage-1.png?resize&sizes[]=400&sizes[]=800&sizes[]=1200&sizes[]=2400`),
       colors: require(`./homepage-1.png?lqip-colors`),
-      alt: 'A young black child looks up from the painting she is drawing.'
+      alt:
+        'Initial mockup of uwc.de with a large, centered headline on a background image and content boxes below.'
     },
     {
       ...require(`./homepage-2.png?resize&sizes[]=400&sizes[]=800&sizes[]=1200&sizes[]=2400`),
       colors: require(`./homepage-2.png?lqip-colors`),
-      alt: 'A young black child looks up from the painting she is drawing.'
+      alt:
+        'Second mockup of uwc.de. The headline is joined by a smaller subheadline, the content boxes are layed out using the golden ratio'
     },
     {
       ...require(`./homepage-3.png?resize&sizes[]=400&sizes[]=800&sizes[]=1200&sizes[]=2400`),
       colors: require(`./homepage-3.png?lqip-colors`),
-      alt: 'A young black child looks up from the painting she is drawing.'
+      alt:
+        'Third mockup of uwc.de. The headline and subheadline have a white background for better legibility, and the logo in the navigation bar is larger'
     },
     {
       ...require(`./homepage-4.jpg?resize&sizes[]=400&sizes[]=800&sizes[]=1200&sizes[]=2400`),
       colors: require(`./homepage-4.jpg?lqip-colors`),
-      alt: 'A young black child looks up from the painting she is drawing.'
+      alt:
+        'Final mockup of uwc.de. The white background has been replaced with a color gradient, the content is no longer boxed'
     }
   ]}
   caption="Evolution of the homepage design."
-  align={Gallery.LEFT}
+  align={Gallery.FULL}
 />
 
 _In writing..._
