--- a/src/pages/disclaimer/index.mdx
+++ b/src/pages/disclaimer/index.mdx
@@ -1,7 +1,7 @@
 import Article from '../../layouts/article'
 
 export const meta = {
-  title: 'Legal'
+  title: 'Disclaimer'
 }
 
 export default ({ children }) => <Article {...meta}>{children}</Article>
