Move components to Bamboo UI

--- a/src/pages/about/index.mdx
+++ b/src/pages/about/index.mdx
@@ -1,9 +1,10 @@
+import { Figure } from '@madebyconnor/bamboo-ui'
 import Article from '../../layouts/article'
-import Figure from '../../components/images/Figure'
 
 export const meta = {
   title: 'I am Connor.',
-  subtitle: 'Nice to meet you. 👋'
+  subtitle: 'Nice to meet you. 👋',
+  slug: 'about'
 }
 
 export default ({ children }) => <Article {...meta}>{children}</Article>
