--- a/src/pages/projects/uwc-deutschland/index.mdx
+++ b/src/pages/projects/uwc-deutschland/index.mdx
@@ -1,6 +1,6 @@
+import { Figure, Gallery } from '@madebyconnor/bamboo-ui'
+
 import Project from '../../../layouts/project'
-import Figure from '../../../components/images/Figure'
-import Gallery from '../../../components/images/Gallery'
 
 export const meta = {
   title: 'UWC Deutschland',
