--- a/src/pages/projects/uwc-blogs/index.mdx
+++ b/src/pages/projects/uwc-blogs/index.mdx
@@ -1,5 +1,6 @@
+import { Figure } from '@madebyconnor/bamboo-ui'
+
 import Project from '../../../layouts/project'
-import Figure from '../../../components/images/Figure'
 
 export const meta = {
   title: 'UWC Blogs',
