feat: Migrate to next-mdx-enhanced

--- a/src/pages/about/index.mdx
+++ b/src/pages/about/index.mdx
@@ -1,13 +1,10 @@
+---
+title: 'I am Connor.'
+subtitle: 'Nice to meet you. 👋'
+layout: 'article'
+---
+
 import { Figure } from '@madebyconnor/bamboo-ui'
-import Article from '../../layouts/article'
-
-export const meta = {
-  title: 'I am Connor.',
-  subtitle: 'Nice to meet you. 👋',
-  slug: 'about'
-}
-
-export default ({ children }) => <Article {...meta}>{children}</Article>
 
 <Figure
   image={{
