--- a/src/pages/blog/africa-is-not-a-country/index.mdx
+++ b/src/pages/blog/africa-is-not-a-country/index.mdx
@@ -1,23 +1,12 @@
+---
+title: 'Africa is not a country'
+description: 'Guess what, it’s a continent. It consists of 55 individual countries, yet western journalists insist on referring to it as one place.'
+date: '2015/3/27'
+category: 'Opinion'
+layout: 'post'
+---
+
 import { Figure } from '@madebyconnor/bamboo-ui'
-
-import Post from '../../../layouts/post'
-import { OPINION } from '../../../constants/categories'
-
-export const meta = {
-  title: 'Africa is not a country',
-  description:
-    'Guess what, it’s a continent. It consists of 55 individual countries, yet western journalists insist on referring to it as one place.',
-  slug: 'africa-is-not-a-country',
-  image: {
-    ...require('./zebra.jpg?resize&sizes[]=400&sizes[]=800&sizes[]=1600&sizes[]=2400'),
-    colors: require('./zebra.jpg?lqip-colors'),
-    alt: 'A zebra stands on dry grass and looks straight into the camera.'
-  },
-  date: '2015/3/27',
-  category: OPINION
-}
-
-export default ({ children }) => <Post {...meta}>{children}</Post>
 
 They generally don’t differentiate between the unique cultures of Botswana and Mauritania, even though they are about as different and far away from each other as the United States and Brazil. They portrait Africa is one big country characterized by HIV/AIDS, poverty, pirates, civil war, famines — the only exceptions perhaps being the north (the region of the Arab spring) and South Africa with elephants and giraffes grazing in front of deep red sunsets. Oh yeah, and the 2010 Soccer World Cup.
 
