--- a/src/pages/projects/uwc-deutschland/index.mdx
+++ b/src/pages/projects/uwc-deutschland/index.mdx
@@ -1,24 +1,14 @@
+---
+title: 'UWC Deutschland'
+subtitle: 'A new online platform for the German UWC national committee.'
+brief: 'UWC Germany selects students to study at one of the 17 United World College worldwide. I guided them through the process of recreating their online content, designed the new website, and developed a custom WordPress theme.'
+link: 'https://uwc.de'
+client: 'Deutsche Stiftung UWC'
+skills: ['Design', 'Development']
+layout: 'project'
+---
+
 import { Figure, Gallery } from '@madebyconnor/bamboo-ui'
-
-import Project from '../../../layouts/project'
-
-export const meta = {
-  title: 'UWC Deutschland',
-  subtitle: 'A new online platform for the German UWC national committee.',
-  brief:
-    'UWC Germany selects students to study at one of the 17 United World College worldwide. I guided them through the process of recreating their online content, designed the new website, and developed a custom WordPress theme.',
-  slug: 'uwc-deutschland',
-  image: {
-    ...require('./uwc-deutschland.jpg?resize&sizes[]=400&sizes[]=800&sizes[]=1200&sizes[]=2400'),
-    colors: require('./uwc-deutschland.jpg?lqip-colors'),
-    alt: 'Screenshot of uwc.de'
-  },
-  link: 'https://uwc.de',
-  client: 'Deutsche Stiftung UWC',
-  skills: ['Design', 'Development']
-}
-
-export default ({ children }) => <Project {...meta}>{children}</Project>
 
 <Figure
   image={{
