--- a/src/pages/blog/nobody-has-the-intention-of-building-an-airport/index.mdx
+++ b/src/pages/blog/nobody-has-the-intention-of-building-an-airport/index.mdx
@@ -1,23 +1,12 @@
+---
+title: '“Nobody has the intention of building an airport!”*'
+description: 'These were the words that passed through my mind as I got on the impossibly crowded bus to Berlin Tegel airport. I’ve never seen so many people unintentionally hugging each other.'
+date: '2013/9/15'
+category: 'Journal'
+layout: 'post'
+---
+
 import { Blockquote } from '@sumup/circuit-ui'
-
-import Post from '../../../layouts/post'
-import { JOURNAL } from '../../../constants/categories'
-
-export const meta = {
-  title: '“Nobody has the intention of building an airport!”*',
-  description:
-    'These were the words that passed through my mind as I got on the impossibly crowded bus to Berlin Tegel airport. I’ve never seen so many people unintentionally hugging each other.',
-  slug: 'nobody-has-the-intention-of-building-an-airport',
-  image: {
-    ...require('./nobody-building-airport.jpg?resize&sizes[]=400&sizes[]=800&sizes[]=1600&sizes[]=2400'),
-    colors: require('./nobody-building-airport.jpg?lqip-colors'),
-    alt: 'An artistic rendering of the welcome hall of the new BER airport.'
-  },
-  date: '2013/9/15',
-  category: JOURNAL
-}
-
-export default ({ children }) => <Post {...meta}>{children}</Post>
 
 I started to fully understand the tragedy behind the disaster that some people call [Berlin Brandenburg Airport](https://www.berlin-airport.de/en/index.php). Not only did I understand it, I could also feel it painfully in the form of an elbow in my back.
 
