--- a/src/pages/blog/this-is-the-europe-i-am-proud-of/index.mdx
+++ b/src/pages/blog/this-is-the-europe-i-am-proud-of/index.mdx
@@ -1,23 +1,13 @@
-import Post from '../../../layouts/post'
+---
+title: 'This is the Europe I am proud of'
+description: 'I am in tears. Finally (!) Austria and Germany show some compassion and welcome refugees. The outpouring of support for refugees is humbling.'
+date: '2015/9/5'
+category: 'Opinion'
+featured: true
+layout: 'post'
+---
+
 import Blockquote from '../../../components/blog/Blockquote'
-import { OPINION } from '../../../constants/categories'
-
-export const meta = {
-  title: 'This is the Europe I am proud of',
-  description:
-    'I am in tears. Finally (!) Austria and Germany show some compassion and welcome refugees. The outpouring of support for refugees is humbling.',
-  slug: 'this-is-the-europe-i-am-proud-of',
-  image: {
-    ...require('./map-tattoo.jpg?resize&sizes[]=400&sizes[]=800&sizes[]=1600&sizes[]=2400'),
-    colors: require('./map-tattoo.jpg?lqip-colors'),
-    alt: 'A stretched out arm shows a tattoo of the map of the world.'
-  },
-  date: '2015/9/5',
-  category: OPINION,
-  featured: true
-}
-
-export default ({ children }) => <Post {...meta}>{children}</Post>
 
 “By Saturday afternoon, officials in Vienna had to ask people to stay away from the train station, which was heavily overcrowded with well-wishers bearing donations.” ([The Guardian](https://www.theguardian.com/world/2015/sep/05/refugee-crisis-warm-welcome-for-people-bussed-from-budapest))
 
