--- a/src/pages/projects/uwc-blogs/index.mdx
+++ b/src/pages/projects/uwc-blogs/index.mdx
@@ -1,24 +1,13 @@
+---
+title: 'UWC Blogs'
+subtitle: 'A collection of 400+ blogs written by UWC students in 28 languages from 77 countries at the 17 United World Colleges.'
+brief: 'I use UWC Blogs as a playground to experiment with new technologies. The latest iteration is built with VueJS and loads in 0.6 seconds or less.'
+client: 'Side Project'
+skills: ['Design', 'Development']
+layout: 'project'
+---
+
 import { Figure } from '@madebyconnor/bamboo-ui'
-
-import Project from '../../../layouts/project'
-
-export const meta = {
-  title: 'UWC Blogs',
-  subtitle:
-    'A collection of 400+ blogs written by UWC students in 28 languages from 77 countries at the 17 United World Colleges.',
-  brief:
-    'I use UWC Blogs as a playground to experiment with new technologies. The latest iteration is built with VueJS and loads in 0.6 seconds or less.',
-  slug: 'uwc-blogs',
-  image: {
-    ...require('./uwc-blogs.jpg?resize&sizes[]=400&sizes[]=800&sizes[]=1200&sizes[]=2400'),
-    colors: require('./uwc-blogs.jpg?lqip-colors'),
-    alt: 'Screenshot of uwcblogs.com'
-  },
-  client: 'Side Project',
-  skills: ['Design', 'Development']
-}
-
-export default ({ children }) => <Project {...meta}>{children}</Project>
 
 <Figure
   image={{
