feat: Enable automatic prerendering

--- a/pages/blog/sound-of-silence.mdx
+++ b/pages/blog/sound-of-silence.mdx
@@ -6,6 +6,7 @@ image:
   alt: 'Waves disturb a dark body of water.'
 date: '2017/4/6'
 category: 'Journal'
+layout: 'post'
 ---
 
 import Blockquote from '../../components/blog/Blockquote'
