feat: Remove dependency on Circuit UI

--- a/pages/blog/nobody-has-the-intention-of-building-an-airport.mdx
+++ b/pages/blog/nobody-has-the-intention-of-building-an-airport.mdx
@@ -9,7 +9,7 @@ category: 'Journal'
 layout: 'post'
 ---
 
-import { Blockquote } from '@sumup/circuit-ui'
+import Blockquote from '../../components/blog/Blockquote'
 
 I started to fully understand the tragedy behind the disaster that some people call [Berlin Brandenburg Airport](https://www.berlin-airport.de/en/index.php). Not only did I understand it, I could also feel it painfully in the form of an elbow in my back.
 
@@ -23,7 +23,7 @@ Tomorrow I’m going to start an internship at the office of the German UWC Nati
 
 ---
 
-<Blockquote size={Blockquote.MEGA}>
+<Blockquote>
   *Reference to the famous quote from 1961 by Walter Ulbricht, then head of
   state of the German Democratic Republic: “Nobody has the intention of building
   a wall!”  —  two month later work began on what was to become the{' '}
