--- a/pages/projects/jekyll-themes.mdx
+++ b/pages/projects/jekyll-themes.mdx
@@ -24,7 +24,7 @@ import { Figure } from '@madebyconnor/bamboo-ui'
 
 Change is a minimalistic, duo-chromatic Jekyll theme that pairs a prominent headline with two column content.
 
-[Demo](https://madebyconnor.github.io/change/) · [Fork on GitHub](https://github.com/madebyconnor/change)
+[Demo](https://connor-baer.github.io/change/) · [Fork on GitHub](https://github.com/connor-baer/change)
 
 <Figure
   image={{
@@ -38,7 +38,7 @@ Change is a minimalistic, duo-chromatic Jekyll theme that pairs a prominent head
 
 Spring is a one-page, two-column Jekyll theme.
 
-[Demo](https://madebyconnor.github.io/spring/) · [Fork on GitHub](https://github.com/madebyconnor/spring)
+[Demo](https://connor-baer.github.io/spring/) · [Fork on GitHub](https://github.com/connor-baer/spring)
 
 <Figure
   image={{
@@ -52,7 +52,7 @@ Spring is a one-page, two-column Jekyll theme.
 
 Summer is a simple Jekyll theme with a photo sidebar.
 
-[Demo](https://madebyconnor.github.io/summer/) · [Fork on GitHub](https://github.com/madebyconnor/summer)
+[Demo](https://connor-baer.github.io/summer/) · [Fork on GitHub](https://github.com/connor-baer/summer)
 
 <Figure
   image={{
@@ -66,4 +66,4 @@ Summer is a simple Jekyll theme with a photo sidebar.
 
 Docs is a minimalist Jekyll theme built for documentation websites.
 
-[Demo](https://madebyconnor.github.io/docs/) · [Fork on GitHub](https://github.com/madebyconnor/docs)
+[Demo](https://connor-baer.github.io/docs/) · [Fork on GitHub](https://github.com/connor-baer/docs)
