fix(all): Add aspect ratio to more images

--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -9,7 +9,8 @@ import { Figure } from '@madebyconnor/bamboo-ui'
 <Figure
   image={{
     src: '/static/images/pages/connor.jpg',
-    alt: 'Connor flashes a big smile at the camera.'
+    alt: 'Connor flashes a big smile at the camera.',
+    aspectRatio: 1.618
   }}
   align={Figure.FULL}
 />
