--- a/pages/blog/africa-is-not-a-country.mdx
+++ b/pages/blog/africa-is-not-a-country.mdx
@@ -17,7 +17,8 @@ They generally don’t differentiate between the unique cultures of Botswana and
   image={{
     src: '/static/images/blog/child-eyes.jpg',
     srcSet: [400, 800, 1200, 2400],
-    alt: 'A young black child looks up from the painting she is drawing.'
+    alt: 'A young black child looks up from the painting she is drawing.',
+    aspectRatio: 3 / 2
   }}
   caption="Yes, this photo was taken in Africa. But it is wrong to reduce ‘Africa’ to big eyes and poverty. There is so much more to the continent and each country is unique."
   align={Figure.LEFT}
