--- a/pages/blog/nobody-has-the-intention-of-building-an-airport.mdx
+++ b/pages/blog/nobody-has-the-intention-of-building-an-airport.mdx
@@ -23,12 +23,4 @@ Tomorrow I’m going to start an internship at the office of the German UWC Nati
 
 ---
 
-<Blockquote>
-  *Reference to the famous quote from 1961 by Walter Ulbricht, then head of
-  state of the German Democratic Republic: “Nobody has the intention of building
-  a wall!”  —  two month later work began on what was to become the{' '}
-  <a href="https://en.wikipedia.org/wiki/Berlin_Wall">Berlin Wall</a>. At the
-  moment workers and politicians struggle to finish the new Berlin Brandenburg
-  airport that is supposed to replace the two old airports Tegel & Schönefeld
-  and should have started operation over a year ago.
-</Blockquote>
+**\*Reference to the famous quote from 1961 by Walter Ulbricht, then head of state of the German Democratic Republic: “Nobody has the intention of building a wall!”  —  two month later work began on what was to become the [Berlin Wall](https://en.wikipedia.org/wiki/Berlin_Wall). At the moment workers and politicians struggle to finish the new Berlin Brandenburg airport that is supposed to replace the two old airports Tegel & Schönefeld and should have started operation over a year ago.**
