--- a/pages/projects/jekyll-themes.mdx
+++ b/pages/projects/jekyll-themes.mdx
@@ -15,7 +15,8 @@ import { Figure } from '@madebyconnor/bamboo-ui'
 <Figure
   image={{
     src: '/static/images/projects/change.jpg',
-    alt: 'Screenshot of the Change Jekyll theme'
+    alt: 'Screenshot of the Change Jekyll theme',
+    aspectRatio: 16 / 9
   }}
   align={Figure.FULL}
 />
@@ -29,7 +30,8 @@ Change is a minimalistic, duo-chromatic Jekyll theme that pairs a prominent head
 <Figure
   image={{
     src: '/static/images/projects/spring.jpg',
-    alt: 'Screenshot of the Spring Jekyll theme'
+    alt: 'Screenshot of the Spring Jekyll theme',
+    aspectRatio: 16 / 9
   }}
   align={Figure.FULL}
 />
@@ -43,7 +45,8 @@ Spring is a one-page, two-column Jekyll theme.
 <Figure
   image={{
     src: '/static/images/projects/summer.jpg',
-    alt: 'Screenshot of the Summer Jekyll theme'
+    alt: 'Screenshot of the Summer Jekyll theme',
+    aspectRatio: 16 / 9
   }}
   align={Figure.FULL}
 />
@@ -57,7 +60,8 @@ Summer is a simple Jekyll theme with a photo sidebar.
 <Figure
   image={{
     src: '/static/images/projects/docs.jpg',
-    alt: 'Screenshot of the Docs Jekyll theme'
+    alt: 'Screenshot of the Docs Jekyll theme',
+    aspectRatio: 16 / 9
   }}
   align={Figure.FULL}
 />
