--- a/pages/projects/uwc-blogs.mdx
+++ b/pages/projects/uwc-blogs.mdx
@@ -15,7 +15,8 @@ import { Figure } from '@madebyconnor/bamboo-ui'
 <Figure
   image={{
     src: '/static/images/projects/uwc-blogs-desktop-mobile.jpg',
-    alt: 'Mockups of the mobile and desktop version of uwcblogs.com'
+    alt: 'Mockups of the mobile and desktop version of uwcblogs.com',
+    aspectRatio: 16 / 9
   }}
   align={Figure.FULL}
 />
