--- a/pages/projects/uwc-deutschland.mdx
+++ b/pages/projects/uwc-deutschland.mdx
@@ -16,7 +16,8 @@ import { Figure, Gallery } from '@madebyconnor/bamboo-ui'
 <Figure
   image={{
     src: '/static/images/projects/uwc-deutschland-desktop-mobile.jpg',
-    alt: 'Screenshot of uwc.de'
+    alt: 'Screenshot of uwc.de',
+    aspectRatio: 16 / 9
   }}
   align={Figure.FULL}
 />
