feat(projects): Update Jekyll theme names

--- a/pages/projects/jekyll-themes.mdx
+++ b/pages/projects/jekyll-themes.mdx
@@ -14,18 +14,18 @@ import { Figure } from '@madebyconnor/bamboo-ui'
 
 <Figure
   image={{
-    src: '/static/images/projects/change.jpg',
-    alt: 'Screenshot of the Change Jekyll theme',
+    src: '/static/images/projects/autumn.jpg',
+    alt: 'Screenshot of the Autumn Jekyll theme',
     aspectRatio: 16 / 9
   }}
   align={Figure.FULL}
 />
 
-# Change
+# Autumn
 
-Change is a minimalistic, duo-chromatic Jekyll theme that pairs a prominent headline with two column content.
+Autumn is a minimalistic, duo-chromatic Jekyll theme that pairs a prominent headline with two column content.
 
-[Demo](https://connor-baer.github.io/change/) · [Fork on GitHub](https://github.com/connor-baer/change)
+[Demo](https://connor-baer.github.io/autumn/) · [Fork on GitHub](https://github.com/connor-baer/autumn)
 
 <Figure
   image={{
@@ -66,8 +66,8 @@ Summer is a simple Jekyll theme with a photo sidebar.
   align={Figure.FULL}
 />
 
-# Docs
+# Winter
 
-Docs is a minimalist Jekyll theme built for documentation websites.
+Winter is a minimalist Jekyll theme built for documentation websites.
 
-[Demo](https://connor-baer.github.io/docs/) · [Fork on GitHub](https://github.com/connor-baer/docs)
+[Demo](https://connor-baer.github.io/winter/) · [Fork on GitHub](https://github.com/connor-baer/winter)
