feat(blog): Add archive and pagination

--- a/pages/blog/africa-is-not-a-country.mdx
+++ b/pages/blog/africa-is-not-a-country.mdx
@@ -6,6 +6,7 @@ image:
   alt: 'A zebra stands on dry grass and looks straight into the camera.'
 date: '2015/3/27'
 category: 'Opinion'
+archived: true
 layout: 'post'
 ---
 
