--- a/pages/blog/nobody-has-the-intention-of-building-an-airport.mdx
+++ b/pages/blog/nobody-has-the-intention-of-building-an-airport.mdx
@@ -6,6 +6,7 @@ image:
   alt: 'An artistic rendering of the welcome hall of the new BER airport.'
 date: '2013/9/15'
 category: 'Journal'
+archived: true
 layout: 'post'
 ---
 
