feat(travel): Add travel guide slider

--- a/pages/travel/guides/cape-town.mdx
+++ b/pages/travel/guides/cape-town.mdx
@@ -1,8 +1,8 @@
 ---
-title: 'Berlin'
-subtitle: 'Dear friends, it’s been ages. I’ve meant to write to you for a while now but never had the courage. I am deeply sorry. This post is both an explanation to you and a plan of action for me.'
+title: 'Cape Town'
+subtitle: 'Bacon ipsum dolor amet beef ham hock pig cow tail meatloaf. Shoulder sausage porchetta landjaeger. Ground round kevin tongue venison brisket burgdoggen pork belly landjaeger. Chuck jerky frankfurter kevin, beef ribs meatball leberkas pork chop tenderloin beef.'
 image:
-  src: '/static/images/guides/berlin/cathedral.jpg'
+  src: '/static/images/guides/cape-town/lions-head.jpg'
   alt: ''
 layout: 'guide'
 ---
